# Genius-Invokation-TCG

./: CMakeLists.txt  README.md
documents/: REFACTORING_SUMMARY.md
include/: choice.h  common.h  elemental_reaction.h  game.h  game_state.h  main.h  role.h
include/utils/: audio.h  display.h  input.h  layout.h  resource.h  word.h
src/: CMakeLists.txt  choice.c  elemental_reaction.c  game.c  game_state.c  main.c  role.c
src/utils/: audio.c  display.c  input.c  layout.c  resource.c  word.c
